--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ header {
 .main-wrapper {
   min-height: 600px;
   padding-top: 60px;
+  margin: 5px 20px;
 }
 
 h2 {
@@ -55,6 +56,10 @@ h2 {
   text-shadow: 2px 2px 2px rgba(121, 120, 112, 0.5);
   padding: 0;
   margin: 20px 0;
+}
+
+.error {
+  color: #FF0000;
 }
 
 footer {
