--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,27 @@ h2 {
   color: #FF0000;
 }
 
+.nolist {
+  list-style-type: none;
+}
+
+input {
+  background: rgb(215, 206, 206);
+  border-color: rgb(109, 62, 62);
+  padding: 5px;
+  margin: 5px;
+  font-size: 18px;
+}
+
+input[type="submit"]:valid {
+  background: rgb(0, 0, 0);
+  border-color: rgb(194, 188, 219);
+  color: #fff;
+  padding: 5px;
+  margin: 5px;
+  font-size: 16px;
+}
+
 footer {
   box-sizing: content-box;
   font-size: 18px;
