--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,12 @@ html, body {
 body {
   max-width: 1200px;
   margin: auto;
-  background-color: rgb(228, 246, 252);
+  background: url(../images/haguruma.png)no-repeat;
+  background-size: cover;
+}
+
+.wall {
+  background: rgba(255, 255, 255, 0.85);
 }
 
 header {
@@ -44,7 +49,7 @@ header {
 }
 
 .main-wrapper {
-  min-height: 600px;
+  min-height: 850px;
   padding-top: 60px;
   margin: 5px 20px;
 }
@@ -84,10 +89,12 @@ input[type="submit"]:valid {
 }
 
 footer {
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 35px;
   box-sizing: content-box;
   font-size: 18px;
   text-align: center;
-  color: rgb(26, 26, 185);
+  color: #fff;
 }
 
 /*=====================
