--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,11 @@ input[type="submit"]:valid {
   font-size: 16px;
 }
 
+img {
+  margin: 10px;
+  width: 70%;
+}
+
 footer {
   background-color: rgba(0, 0, 0, 0.8);
   height: 35px;
