--- a/css/style.css
+++ b/css/style.css
@@ -56,12 +56,23 @@ header {
 }
 
 h2 {
+  position: relative;
   color: #000000;
-  font-size: 24px;
+  font-size: 25px;
   font-weight: bold;
-  text-shadow: 2px 2px 2px rgba(121, 120, 112, 0.5);
+  text-shadow: 2px 2px 2px rgba(120, 118, 97, 0.6);
   padding: 0;
   margin: 20px 0;
+}
+
+h2:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 50%;
+  height: 8px;
+  background: repeating-linear-gradient(-45deg, rgb(240, 175, 80), rgb(240, 175, 80) 2px, white 2px, white 4px);
 }
 
 .error {
@@ -110,6 +121,26 @@ footer {
   font-size: 18px;
   text-align: center;
   color: #fff;
+}
+
+.br50 {
+  height: 50px;
+}
+
+.br100 {
+  height: 100px;
+}
+
+.frame {
+  padding: 10px;
+  margin: 10px;
+  background-color: rgba(126, 179, 140, 0.6);
+  line-height: 1.8em;
+}
+
+.line {
+  color: #444444;
+  text-decoration: underline dotted red 4px;
 }
 
 /*=====================
