--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ h2 {
   font-size: 25px;
   font-weight: bold;
   text-shadow: 2px 2px 2px rgba(120, 118, 97, 0.6);
-  padding: 0;
+  padding: 2px;
   margin: 20px 0;
 }
 
@@ -70,7 +70,7 @@ h2:after {
   position: absolute;
   left: 0;
   bottom: 0;
-  width: 50%;
+  width: 60%;
   height: 8px;
   background: repeating-linear-gradient(-45deg, rgb(240, 175, 80), rgb(240, 175, 80) 2px, white 2px, white 4px);
 }
