--- a/css/style.css
+++ b/css/style.css
@@ -106,12 +106,12 @@ img {
 
 .column {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .clm3 {
-  flex-wrap: wrap;
-  width: 100%;
-  margin: 25px 8px;
+  width: 45%;
+  margin: 10px auto;
 }
 
 footer {
