--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html, body {
 
 body {
   max-width: 1200px;
-  margin: auto;
+  margin: 0 auto;
   background: url(../images/haguruma.png);
   background-size: cover;
   background-attachment: fixed;
@@ -22,6 +22,7 @@ body {
 
 .wall {
   background: rgba(240, 248, 255, 0.9);
+  padding-bottom: 5px;
 }
 
 header {
@@ -75,6 +76,13 @@ h2:after {
   background: repeating-linear-gradient(-45deg, rgb(240, 175, 80), rgb(240, 175, 80) 2px, white 2px, white 4px);
 }
 
+h3 {
+  padding: 1rem;
+  letter-spacing: .12em;
+  color: #fff;
+  text-shadow: #000 2px 0, #000 -2px 0, #000 0 -2px, #000 0 2px, #000 2px 2px, #000 -2px 2px, #000 2px -2px, #000 -2px -2px, #000 1px 2px, #000 -1px 2px, #000 1px -2px, #000 -1px -2px, #000 2px 1px, #000 -2px 1px, #000 2px -1px, #000 -2px -1px, 4px 4px 0 #000, 0 4px 0 #000;
+}
+
 .error {
   color: #FF0000;
 }
@@ -116,7 +124,7 @@ img {
 
 footer {
   background-color: rgba(0, 0, 0, 0.8);
-  height: 35px;
+  line-height: 40px;
   box-sizing: content-box;
   font-size: 18px;
   text-align: center;
