--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,10 @@ header {
 
 .chara {
   background: url("../images/boat.png")no-repeat;
-  background-size: 15%;
-  width: 100%;
-  height: 100%;
+  background-size: 22%;
+  width: 90%;
+  height: 90%;
+  max-width: 900px;
   position: absolute;
   z-index: 10;
   top: 60px;
@@ -69,9 +70,10 @@ header {
 
 .chara2 {
   background: url("../images/bike.png")no-repeat;
-  background-size: 15%;
-  width: 100%;
-  height: 100%;
+  background-size: 22%;
+  max-width: 900px;
+  width: 90%;
+  height: 90%;
   position: absolute;
   z-index: 10;
   top: 60px;
@@ -194,17 +196,17 @@ footer {
 }
 
 /*=====================
-540px以上
+420px以上
 =====================*/
-@media screen and (min-width:540px) {
+@media screen and (min-width:420px) {
   .br50 {
     height: 100px;
   }
 }
 /*=====================
-780px以上
+720px以上
 =====================*/
-@media screen and (min-width:1000px) {
+@media screen and (min-width:720px) {
   .br50 {
     height: 150px;
   }
