--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ h3 {
   color: #FF0000;
 }
 
-.nolist {
+section li {
   list-style-type: none;
 }
 
@@ -175,6 +175,10 @@ footer {
   color: #fff;
 }
 
+.br30 {
+  height: 30px;
+}
+
 .br50 {
   height: 50px;
 }
@@ -190,9 +194,25 @@ footer {
   line-height: 1.8em;
 }
 
+.frame1 {
+  padding: 10px;
+  margin: 10px;
+  background-color: rgba(212, 195, 137, 0.8);
+  line-height: 1.8em;
+  border: 4px dashed #444444;
+}
+
+.frame li {
+  list-style: square;
+}
+
 .line {
   color: #444444;
-  text-decoration: underline dotted red 4px;
+  border-bottom: dotted red 3px;
+}
+
+table {
+  margin: 30px auto;
 }
 
 /*=====================
