--- a/css/style.css
+++ b/css/style.css
@@ -81,23 +81,23 @@ header {
 }
 
 @keyframes stepline {
-	0% {
-		background-position: -90% 0;
-	}
+  0% {
+    background-position: -90% 0;
+  }
 
-	100% {
-		background-position: 120% 0;
-	}
+  100% {
+    background-position: 120% 0;
+  }
 }
 
 @keyframes stepline2 {
-	0% {
-		background-position: -20% 0;
-	}
+  0% {
+    background-position: -20% 0;
+  }
 
-	100% {
-		background-position: 190% 0;
-	}
+  100% {
+    background-position: 190% 0;
+  }
 }
 
 h2 {
@@ -216,6 +216,75 @@ table {
 }
 
 /*=====================
+ハンバーグメニュー
+=====================*/
+
+/*ボタン外側※レイアウトによってpositionや形状は適宜変更してください*/
+.openbtn {
+  /*ボタン内側の基点となるためrelativeを指定。
+追従するナビゲーションの場合はfixed＋top、rightといった位置をセットで指定*/
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  background: rgb(158, 179, 158);
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  border-radius: 20px;
+}
+
+/*ボタン内側*/
+.openbtn span {
+  display: inline-block;
+  transition: all .4s;
+  /*アニメーションの設定*/
+  position: absolute;
+}
+
+.openbtn span:nth-of-type(1),
+.openbtn span:nth-of-type(3) {
+  height: 2px;
+  background: #fff;
+  width: 62%;
+  left: 10px;
+}
+
+.openbtn span:nth-of-type(1) {
+  top: 13px;
+}
+
+.openbtn span:nth-of-type(2) {
+  top: 12px;
+  left: 11px;
+  font-size: 0.6rem;
+  text-transform: uppercase;
+  color: rgb(251, 255, 215);
+}
+
+.openbtn span:nth-of-type(3) {
+  top: 36px;
+}
+
+/*activeクラスが付与されると線が回転して×になり、Menu表記をしている2つ目の要素が透過して消える*/
+.openbtn.active span:nth-of-type(1) {
+  top: 18px;
+  left: 18px;
+  transform: translateY(6px) rotate(-45deg);
+  width: 30%;
+}
+
+.openbtn.active span:nth-of-type(2) {
+  opacity: 0;
+}
+
+.openbtn.active span:nth-of-type(3) {
+  top: 30px;
+  left: 18px;
+  transform: translateY(-6px) rotate(45deg);
+  width: 30%;
+}
+
+/*=====================
 420px以上
 =====================*/
 @media screen and (min-width:420px) {
@@ -223,6 +292,7 @@ table {
     height: 100px;
   }
 }
+
 /*=====================
 720px以上
 =====================*/
