--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,8 @@ table {
   position: absolute;
   top: 5px;
   right: 10px;
-  background: rgb(158, 179, 158);
+  z-index: 1000;
+  background: rgb(150, 185, 146);
   cursor: pointer;
   width: 50px;
   height: 50px;
@@ -255,10 +256,11 @@ table {
 
 .openbtn span:nth-of-type(2) {
   top: 12px;
-  left: 11px;
-  font-size: 0.6rem;
+  left: 8px;
+  font-size: 0.7rem;
   text-transform: uppercase;
-  color: rgb(251, 255, 215);
+  color: rgb(77, 72, 20);
+  font-weight: bold;
 }
 
 .openbtn span:nth-of-type(3) {
@@ -282,6 +284,110 @@ table {
   left: 18px;
   transform: translateY(-6px) rotate(45deg);
   width: 30%;
+}
+
+/*=====================
+グローバルナビ
+=====================*/
+
+#g-nav.panelactive {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+.circle-bg {
+  position: fixed;
+  z-index: 3;
+  /*丸の形*/
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: rgba(19, 119, 126, 0.95);
+  /*丸のスタート位置と形状*/
+  transform: scale(0);
+  /*scaleをはじめは0に*/
+  right: -50px;
+  top: -50px;
+  transition: all .8s;
+  /*0.6秒かけてアニメーション*/
+}
+
+.circle-bg.circleactive {
+  transform: scale(50);
+  /*クラスが付与されたらscaleを拡大*/
+}
+
+#g-nav.panelactive #g-nav-list {
+  display: block;
+  /*クラスが付与されたら出現*/
+}
+
+/*ナビゲーションの縦スクロール*/
+#g-nav-list {
+  display: none;
+  /*はじめは表示なし*/
+  /*ナビの数が増えた場合縦スクロール*/
+  position: fixed;
+  z-index: 999;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+#g-nav ul {
+  opacity: 0;
+  /*ナビゲーション天地中央揃え*/
+  position: absolute;
+  z-index: 999;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/*背景が出現後にナビゲーションを表示*/
+#g-nav.panelactive ul {
+  opacity: 1;
+}
+
+/* 背景が出現後にナビゲーション li を表示*/
+#g-nav.panelactive ul li {
+  animation-name: gnaviAnime;
+  animation-duration: 1s;
+  animation-delay: .2s;
+  /*0.2 秒遅らせて出現*/
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes gnaviAnime {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+
+/*リストのレイアウト設定*/
+#g-nav li {
+  text-align: center;
+  list-style: none;
+}
+
+#g-nav li a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  padding: 10px;
+  display: block;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-weight: bold;
 }
 
 /*=====================
