--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ header {
 }
 
 .main-wrapper {
-  min-height: 750px;
+  min-height: 100vh;
   padding-top: 60px;
   margin: 5px 20px;
 }
@@ -227,7 +227,7 @@ table {
   top: 5px;
   right: 10px;
   z-index: 1000;
-  background: rgb(150, 185, 146);
+  background: rgb(165, 180, 175);
   cursor: pointer;
   width: 50px;
   height: 50px;
