--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ input[type="submit"]:valid {
 
 .clm3 {
   z-index: 100;
-  width: 45%;
+  width: 30%;
   margin: 10px auto;
 }
 
@@ -373,7 +373,6 @@ table {
   }
 }
 
-
 /*リストのレイアウト設定*/
 #g-nav li {
   text-align: center;
@@ -414,5 +413,18 @@ table {
 @media screen and (max-width:780px) {
   .header-contents h1 {
     font-size: 1.3rem;
+  }
+}
+
+/*=====================
+スマホ
+=====================*/
+@media screen and (max-width:500px) {
+  #g-nav li a {
+    font-size: 12px;
+  }
+
+  .clm3 {
+    width: 45%;
   }
 }
