--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,9 @@ header {
 
 .chara {
   background: url("../images/boat.png")no-repeat;
-  background-size: 22%;
-  width: 90%;
-  height: 90%;
+  background-size: 20%;
+  width: 100%;
+  height: 100%;
   max-width: 900px;
   position: absolute;
   z-index: 10;
@@ -70,10 +70,10 @@ header {
 
 .chara2 {
   background: url("../images/bike.png")no-repeat;
-  background-size: 22%;
+  background-size: 20%;
   max-width: 900px;
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  height: 100%;
   position: absolute;
   z-index: 10;
   top: 60px;
@@ -130,8 +130,17 @@ h3 {
   color: #FF0000;
 }
 
+#private {
+  position:absolute;
+  z-index: 100;
+}
+
 section li {
   list-style-type: none;
+}
+
+section li a {
+  text-decoration: none;
 }
 
 input {
