--- a/css/style.css
+++ b/css/style.css
@@ -133,9 +133,7 @@ h3 {
   color: #FF0000;
 }
 
-#private {
-  
-}
+#private {}
 
 section li {
   list-style-type: none;
@@ -151,6 +149,14 @@ input {
   padding: 5px;
   margin: 5px;
   font-size: 18px;
+}
+
+select {
+  background: rgb(215, 206, 206);
+  border-color: rgb(109, 62, 62);
+  padding: 10px;
+  margin: 5px;
+  font-size: 16px;
 }
 
 input[type="submit"]:valid {
